kubernetes-flux/blade/gateway-system/cloudflare-gateway/app/gatewayclass.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gatewayclass_v1.json

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cloudflare
spec:
  controllerName: "github.com/pl4nty/cloudflare-kubernetes-gateway"
  parametersRef:
    group: ""
    kind: Secret
    namespace: gateway-system
    name: cloudflare-gateway
