kubernetes-flux/blade/gateway-system/cloudflare-gateway/app/gateway.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json

apiVersion: "gateway.networking.k8s.io/v1"
kind: Gateway
metadata:
  name: blade-huggins-dev
spec:
  gatewayClassName: cloudflare
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
